erDiagram

  INDIBA_SESSION {
    int id PK
    int patientId FK
    int physiotherapistId FK
    datetime beginSession
    datetime endSession
    string treatedArea
    string mode
    float capacitiveIntensity
    float resistiveIntensity
    string observations
  }

  PATIENT {
    int id PK
    string email
    string legalName
    string surname
  }

  PHYSIOTHERAPIST {
    int id PK
    string email
    string name
    string surname
  }

  PATIENT ||--o{ INDIBA_SESSION : "rep"
  PHYSIOTHERAPIST ||--o{ INDIBA_SESSION : "realitza"
